Tue Jan  4 17:37:29 2005  Steve Huston  <shuston@riverace.com>

	* ace/ACE.h: Corrected t_rcv(), t_rcv_n_i() to be extern ACE_Export,
	  not ACE_NAMESPACE_INLINE_FUNCTION - the bodies are defined in the
	  .cpp file, and not inline.

Tue Jan  4 17:22:14 2005  Steve Huston  <shuston@riverace.com>

	* ace/Signal.h:
	* ace/TLI.h:
	* ace/TLI_Stream.h: Include "ace/config-lite.h" before testing any ACE
	  config macros.

Tue Jan  4 09:56:46 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/TMCast/TMCast.mpc:
	* bin/MakeProjectCreator/config/tmcast.mpb:

	  Changed to inherit from exceptions.mpb and threads.mpb

	* bin/MakeProjectCreator/exceptions.mpb:
	* bin/MakeProjectCreator/threads.mpb:

	  New files, MPC base projects that require exceptions and threads
	  respecitively.  Projects can inherit from these instead of using
	  an explicit requires +=, which can result in duplicate entries.

Tue Jan  4 13:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/create-jace-release:
          Removed this file

Tue Jan  4 13:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CLASSIX/*:
        * tests/CLASSIX/*:
          Removed all these files, they are old and not maintained for
          a long time

        * psosim/*:
        * java/*:
          Removed the contents of these directories. These files where not
          shipped as part of the release and are not used anymore.

          This fixes bugzilla bug [2015].

Tue Jan  4 08:07:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Multicast_Test.cpp:
        * tests/Multicast_Test_IPV6.cpp:
          Fixed unused argument warnings

Tue Jan  4 04:25:44 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ace/OS_NS_sys_stat.inl:
	* ace/OS_NS_sys_utsname.inl:

	  Fixes for SUN Studio 9 builds on x86 platform. New builds will
	  be setup soon to track this on a day-today basis.

Mon Jan  3 16:53:59 2005  J.T. Conklin  <jtc@acorntoolworks.com>
